tests/ui/imports/overwrite-different-vis-2.stderr
error[E0425]: cannot find function `f` in this scope
  --> $DIR/overwrite-different-vis-2.rs:16:5
   |
LL |     f();
   |     ^ not found in this scope
   |
help: consider importing this function through its public re-export
   |
LL + use crate::outer::f;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
